# closedloop_takehome

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml
.cursor/rules/: RULES.mdc
medical_diagnostic_agent/: __init__.py  agent.py
medical_diagnostic_agent/data/: mock_medical_data.py  patient_records.py  patients.json
medical_diagnostic_agent/tools/: medical_knowledge.py  patient_lookup.py  risk_assessment.py
tests/: conftest.py  test_agents.py  test_medical_knowledge.py  test_patient_lookup.py  test_risk_assessment.py
